add GET api/meetings/
